--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,10 @@
         android:name=".Offline_firebase"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-        android:icon="@drawable/secofficial"
+        android:icon="@mipmap/ic_launcher_foreground"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:roundIcon="@drawable/secofficial"
+        android:roundIcon="@mipmap/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
